# IP2-Watermarker

./: .gitignore  CMakeLists.txt  DragEventFilter.cpp  DragEventFilter.h  IP2Watermarker.pro  SceneDragEventFilter.cpp  SceneDragEventFilter.h  dragframe.cpp  dragframe.h  draglabel.cpp  draglabel.h  ffmpeg.qrc  logooverlay.cpp  logooverlay.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  placeholdersquare.cpp  placeholdersquare.h
